--- a/e4040/hw2/task1-optimization.ipynb
+++ b/e4040/hw2/task1-optimization.ipynb
@@ -716,7 +716,17 @@
     "id": "uL5H31uzfmn3"
    },
    "source": [
-    "Answer: **[fill in here]**."
+    "Answer: \n",
+    "\n",
+    "**SGD use the random batch to update one at a time. It is therefore usually much faster and can also be used to learn online. SGD performs frequent updates with a high variance that cause the objective function to fluctuate heavily.**\n",
+    "\n",
+    "**Momentum is a method that helps accelerate SGD in the relevant direction and dampens oscillations. It does this by adding a fraction gamma of the update vector of the pask time step to the current update vector.**\n",
+    "\n",
+    "**Adagrad adapts the learning rate to the parameters, performing smaller updates for parameters associated with infrequent features. It is well-suited for dealing with sparse data.**\n",
+    "\n",
+    "**Adam compoute adaptive learning rates for each parameter. Adam behaves like a heavy ball with friction, which thus prefers flat minima in the error surface.**\n",
+    "\n",
+    "**Nadam combines Adam and NAG (Nesterov-accelerated Adaptive Moment Estimation).**"
    ]
   }
  ],
