--- a/e4040/hw2/task2-regularization.ipynb
+++ b/e4040/hw2/task2-regularization.ipynb
@@ -559,7 +559,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer: **[fill in here]**"
+    "Answer: \n",
+    "\n",
+    "**The loss drop slower and smoother when using batch normalization, also it slower the increase of accuracy. But we can find that the model is not converged and still have a greate potential. With limited epoches trained, we still can't find out which will perform better.**"
    ]
   },
   {
@@ -909,7 +911,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer: **[fill in here]**"
+    "Answer: \n",
+    "\n",
+    "**Dropout layer will lower the accuracy in the beginning of training, cause some parameters are updated and some are not. We still can't say which can perform better since the number of epoch is limited.**"
    ]
   },
   {
