updated-e4750-hw4-cuda

--- a/e4750/hw4/pycuda_hw4.ipynb
+++ b/e4750/hw4/pycuda_hw4.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
     "\n",
     "        return Y\n",
     "\n",
-    "    def prefix_sum_gpu_naive(self, N, length):\n",
+    "    def prefix_sum_gpu_naive2(self, N, length):\n",
     "        \"\"\"\n",
     "        Prefix_sum using Kogge-Stone scan kernel\n",
     "\n",
@@ -347,7 +347,7 @@
     "        return Y\n",
     "\n",
     "\n",
-    "    def prefix_sum_gpu_naive2(self, N, length):\n",
+    "    def prefix_sum_gpu_naive(self, N, length):\n",
     "        \"\"\"\n",
     "        Prefix_sum using Kogge-Stone scan kernel\n",
     "\n",
@@ -358,12 +358,15 @@
     "\t\t- Y: result\n",
     "\t\t- time\n",
     "\t\t\"\"\"\n",
+    "        start = cuda.Event()\n",
+    "        end = cuda.Event()\n",
+    "        start.record()\n",
     "\n",
+    "        # times for iteration\n",
     "        if length<=1024:\n",
     "            n = 1\n",
     "        else:\n",
     "            n = math.ceil(math.log(length, 1024))\n",
-    "        print(n)\n",
     "\n",
     "        Y_d_list = []\n",
     "        E_d_list = [gpuarray.to_gpu(N)]\n",
@@ -382,7 +385,6 @@
     "            Y_d_list.append(gpuarray.zeros(gridsize_list[-1], dtype=np.float64))\n",
     "            # gridsize for this step\n",
     "            gridsize_list.append((gridsize_list[i]-1)//blocksize+1)\n",
-    "            print(gridsize_list[-1])\n",
     "            # list of last elements for this step\n",
     "            E_d_list.append(gpuarray.zeros(gridsize_list[-1], dtype=np.float64))\n",
     "\n",
@@ -394,13 +396,11 @@
     "            func_dis(Y_d_list[i], Y_d_list[i+1], np.int32(gridsize_list[i]), block=BlockDim, grid=(gridsize_list[i+1],1,1))\n",
     "            cuda.Context.synchronize()\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
     "        Y = Y_d_list[0].get().copy()\n",
-    "        E = E_d_list[1].get().copy()\n",
     "        \n",
-    "        return Y, E\n",
+    "        end.record()\n",
+    "\n",
+    "        return Y, start.time_till(end)\n",
     "\n",
     "\n",
     "    def prefix_sum_gpu_work_efficient(self, N, length):\n",
@@ -414,6 +414,11 @@
     "\t\t- Y: result\n",
     "\t\t- time\n",
     "\t\t\"\"\"\n",
+    "        start = cuda.Event()\n",
+    "        end = cuda.Event()\n",
+    "        start.record()\n",
+    "\n",
+    "        # times for iteration\n",
     "        if length<=2048:\n",
     "            n = 1\n",
     "        else:\n",
@@ -450,8 +455,9 @@
     "            cuda.Context.synchronize()\n",
     "\n",
     "        Y = Y_d_list[0].get().copy()\n",
+    "        end.record()\n",
     "\n",
-    "        return Y\n",
+    "        return Y, start.time_till(end)\n",
     "\n",
     "\n",
     "\n",
@@ -541,8 +547,8 @@
     "        - (bool): correct or not\n",
     "\t\t\"\"\"\n",
     "\n",
-    "        N = np.arange(1,6,step=1)\n",
-    "        check_ary = np.array([1,3,6,10,15])\n",
+    "        N = np.array([3,1,7,0,4,1,6,3])\n",
+    "        check_ary = np.array([3,4,11,11,14,16,22,25])\n",
     "        Y = PrefixSum.prefix_sum_python(N, N.shape[0])\n",
     "\n",
     "        if np.allclose(Y,check_ary):\n",
@@ -607,6 +613,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_a = [1,3,4]\n",
+    "np.save('.time_python_naive.npy', np.array(time_a))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 188,
    "metadata": {},
    "outputs": [
@@ -651,26 +667,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
-      "131072\n",
-      "128\n",
-      "1\n",
-      "[511.91428334 512.69835306 513.54656561 514.33229607 515.05812374\n",
-      " 515.79575304 515.97174694 515.99955783 516.08433455 516.7508551\n",
-      " 517.08265925 517.95047244 518.56988161 519.2416178  519.39244458]\n",
-      "[67113114.12358986 67113114.24657273 67113114.40564233 67113114.8555667\n",
-      " 67113115.35630976 67113115.81148148 67113116.64907447 67113116.70665126\n",
-      " 67113117.3568334  67113118.26613593]\n",
-      "[517.08265925 521.24806188 512.97319641 ... 531.25957416 509.18232564\n",
-      " 529.41327933]\n",
-      "67113118.08026347\n"
+      "[505.15309977 505.95376751 506.89349722 507.5954193  508.58424758\n",
+      " 509.13202252 510.08821936 510.81910947 510.97019519 511.53102043\n",
+      " 512.1079466  512.37442826 512.92366293 513.74380205 514.3356881 ]\n",
+      "[67110244.3923093  67110244.71258187 67110244.8295955  67110245.00464275\n",
+      " 67110245.66712962 67110246.02577911 67110246.28035522 67110247.0787818\n",
+      " 67110247.2690281  67110247.62530681]\n",
+      "[512.1079466  503.74382136 512.36733754 ... 522.16820941 527.28448018\n",
+      " 497.27628861]\n",
+      "67110247.9970207\n"
      ]
     }
    ],
@@ -681,7 +693,7 @@
     "\n",
     "summer = PrefixSum()\n",
     "# Y_gpu_efi= summer.prefix_sum_gpu_naive(N, length)\n",
-    "Y_gpu_efi2, E = summer.prefix_sum_gpu_naive2(N, length)\n",
+    "Y_gpu_efi2, E = summer.prefix_sum_gpu_naive(N, length)\n",
     "\n",
     "# print(np.allclose(Y_gpu_efi, Y_gpu_efi2))\n",
     "\n",
