updated-e4750-hw4-cuda

--- a/e4750/hw4/pycuda_hw4.ipynb
+++ b/e4750/hw4/pycuda_hw4.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,6 +456,7 @@
     "\n",
     "        Y = Y_d_list[0].get().copy()\n",
     "        end.record()\n",
+    "        end.synchronize()\n",
     "\n",
     "        return Y, start.time_till(end)\n",
     "\n",
@@ -663,6 +664,30 @@
     "# print(Y_gpu_efi)\n",
     "# print(Y_python)\n",
     "print(N.sum())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.6895359754562378\n"
+     ]
+    }
+   ],
+   "source": [
+    "length = 2**11 * 2*16\n",
+    "\n",
+    "N = np.random.rand(length).astype(np.float64)\n",
+    "\n",
+    "summer = PrefixSum()\n",
+    "# Y_gpu_efi= summer.prefix_sum_gpu_work_efficient2(N, length)\n",
+    "Y_gpu_efi2, time_efi = summer.prefix_sum_gpu_work_efficient(N, length)\n",
+    "print(time_efi)"
    ]
   },
   {
