--- a/e4750/hw4/opencl_hw4.ipynb
+++ b/e4750/hw4/opencl_hw4.ipynb
@@ -2,15 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pyopencl as cl\n",
     "import numpy as np\n",
     "import time\n",
-    "import pyopencl.array as cl_ay\n",
-    "from scipy import signal\n",
+    "import pyopencl.array as array\n",
     "import math\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -227,7 +226,7 @@
     "            n = math.ceil(math.log(length, 1024))\n",
     "\n",
     "        Y_d_list = []\n",
-    "        E_d_list = [cl_ay.to_device(self.queue, arrayin)]\n",
+    "        E_d_list = [array.to_device(self.queue, arrayin)]\n",
     "\n",
     "        blocksize = 1024\n",
     "        gridsize_list = [length]\n",
@@ -237,16 +236,16 @@
     "\n",
     "        for i in range(n):\n",
     "            # memory allocation for Y\n",
-    "            Y_d_list.append(cl_ay.zeros(gridsize_list[-1], dtype=np.float64))\n",
+    "            Y_d_list.append(array.zeros(self.queue, gridsize_list[-1], dtype=np.float64))\n",
     "            # gridsize for this step\n",
     "            gridsize_list.append(((gridsize_list[i]-1)//blocksize+1)*blocksize)\n",
     "            # list of last elements for this step\n",
-    "            E_d_list.append(cl_ay.zeros(gridsize_list[-1], dtype=np.float64))\n",
+    "            E_d_list.append(array.zeros(self.queue, gridsize_list[-1], dtype=np.float64))\n",
     "\n",
     "            event_red = func_red(\n",
     "                self.queue, \n",
-    "                gridsize_list[-1], blocksize,\n",
-    "                E_d_list[i], Y_d_list[i], E_d_list[-1],np.int32(gridsize_list[i])\n",
+    "                (gridsize_list[-1],1,1), (blocksize,1,1),\n",
+    "                E_d_list[i].data, Y_d_list[i].data, E_d_list[-1].data, np.int32(gridsize_list[i])\n",
     "            )\n",
     "            event_red.wait()\n",
     "\n",
@@ -254,8 +253,8 @@
     "        for i in range(n-1)[::-1]:\n",
     "            event_dist = func_dis(\n",
     "                self.queue, \n",
-    "                gridsize_list[i+1], blocksize, \n",
-    "                Y_d_list[i], Y_d_list[i+1], np.int32(gridsize_list[i])\n",
+    "                (gridsize_list[i+1],1,1), (blocksize,1,1), \n",
+    "                Y_d_list[i].data, Y_d_list[i+1].data, np.int32(gridsize_list[i])\n",
     "            )\n",
     "            event_dist.wait()\n",
     "\n",
@@ -265,47 +264,125 @@
     "\n",
     "        return Y, (t_end-t_start)*1e3\n",
     "\n",
-    "    def prefix_sum_gpu_work_efficient(self, arrayin, arraysize):\n",
-    "        pass\n",
     "\n",
-    "    def prefix_sum_python(self, a, N):  # a is input array, N = size of a\n",
+    "    def prefix_sum_gpu_work_efficient(self, N, length):\n",
+    "        \"\"\"\n",
+    "        Prefix_sum using Brent-Kung scan kernel\n",
+    "\n",
+    "\t\tparams:\n",
+    "\t\t- N: input array\n",
+    "\n",
+    "\t\treturn:\n",
+    "\t\t- Y: result\n",
+    "\t\t- time\n",
+    "\t\t\"\"\"\n",
     "        t_start = time.time()\n",
-    "        b = np.empty_like(a)\n",
-    "        b[0] = a[0]\n",
-    "        for i in range(1, N):\n",
-    "            b[i] = b[i - 1] + a[i]\n",
-    "        t_end = time.time()\n",
-    "        return b, (t_end - t_start)*1e3\n",
     "\n",
+    "        if length<=2048:\n",
+    "            n = 1\n",
+    "        else:\n",
+    "            n = math.ceil(math.log(length, 2048))\n",
+    "\n",
+    "        Y_d_list = []\n",
+    "        E_d_list = [array.to_device(self.queue, N)]\n",
+    "\n",
+    "        blocksize = 1024\n",
+    "        gridsize_list = [length]\n",
+    "\n",
+    "        func_red = self.prg.BrentKung_end\n",
+    "        func_dis = self.prg.phase3_brentkung\n",
+    "\n",
+    "        for i in range(n):\n",
+    "            # memory allocation for Y\n",
+    "            Y_d_list.append(array.zeros(self.queue, gridsize_list[-1], dtype=np.float64))\n",
+    "            # gridsize for this step\n",
+    "            gridsize_list.append(((gridsize_list[i]-1)//blocksize+1)*blocksize)\n",
+    "            # list of last elements for this step\n",
+    "            E_d_list.append(array.zeros(self.queue, gridsize_list[-1], dtype=np.float64))\n",
+    "\n",
+    "            event_red = func_red(\n",
+    "                self.queue, \n",
+    "                (gridsize_list[-1],1,1), (blocksize,1,1),\n",
+    "                E_d_list[i].data, Y_d_list[i].data, E_d_list[-1].data, np.int32(gridsize_list[i])\n",
+    "            )\n",
+    "            event_red.wait()\n",
+    "\n",
+    "\n",
+    "        for i in range(n-1)[::-1]:\n",
+    "            event_dist = func_dis(\n",
+    "                self.queue, \n",
+    "                (gridsize_list[i+1],1,1), (blocksize,1,1), \n",
+    "                Y_d_list[i].data, Y_d_list[i+1].data, np.int32(gridsize_list[i])\n",
+    "            )\n",
+    "            event_dist.wait()\n",
+    "\n",
+    "        Y = Y_d_list[0].get()\n",
+    "\n",
+    "        t_end = time.time()\n",
+    "\n",
+    "        return Y, (t_end-t_start)*1e3\n",
+    "\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def test_prefix_sum_python(printing=True):\n",
+    "        \"\"\"\n",
+    "\t\tTest function prefix_sum_python\n",
+    "        yi = x0 + ... + xi\n",
+    "\n",
+    "\t\tparams:\n",
+    "\t\t- printing(boolean): print debug information\n",
+    "\n",
+    "\t\treturn:\n",
+    "        - (bool): correct or not\n",
+    "\t\t\"\"\"\n",
+    "\n",
+    "        N = np.array([3,1,7,0,4,1,6,3])\n",
+    "        check_ary = np.array([3,4,11,11,14,16,22,25])\n",
+    "        Y = PrefixSum.prefix_sum_python(N, N.shape[0])\n",
+    "\n",
+    "        if np.allclose(Y,check_ary):\n",
+    "            if printing:\n",
+    "                print('Input array: ', N)\n",
+    "                print('Output array: ', Y)\n",
+    "                print('Check array: ', check_ary)\n",
+    "                print('Correct!')\n",
+    "                return True\n",
+    "            else:\n",
+    "                return True\n",
+    "        else:\n",
+    "            if printing:\n",
+    "                print('Input array: ', N)\n",
+    "                print('Output array: ', Y)\n",
+    "                print('Check array: ', check_ary)\n",
+    "                print('Incorrect!')\n",
+    "                return False\n",
+    "            else:\n",
+    "                return False   \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "zeros() missing 1 required positional argument: 'shape'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-26555829c36f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mN\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrand\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlength\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat64\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mY_inefi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt_inefi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msummer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprefix_sum_gpu_naive\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mN\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlength\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mY_python\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt_python\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msummer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprefix_sum_python2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mN\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlength\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-14-942fe02cdd83>\u001b[0m in \u001b[0;36mprefix_sum_gpu_naive\u001b[0;34m(self, arrayin, length)\u001b[0m\n\u001b[1;32m    185\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    186\u001b[0m             \u001b[0;31m# memory allocation for Y\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 187\u001b[0;31m             \u001b[0mY_d_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcl_ay\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgridsize_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat64\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    188\u001b[0m             \u001b[0;31m# gridsize for this step\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    189\u001b[0m             \u001b[0mgridsize_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgridsize_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m//\u001b[0m\u001b[0mblocksize\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mblocksize\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: zeros() missing 1 required positional argument: 'shape'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
      ]
     }
    ],
    "source": [
     "summer = PrefixSum()\n",
     "\n",
-    "length = 1000\n",
+    "length = 2**11 * 2**16\n",
     "\n",
     "N = np.random.rand(length).astype(np.float64)\n",
     "\n",
     "Y_inefi, t_inefi = summer.prefix_sum_gpu_naive(N, length)\n",
+    "Y_efi, t_efi = summer.prefix_sum_gpu_work_efficient(N, length)\n",
     "Y_python, t_python = summer.prefix_sum_python2(N, length)\n",
     "\n",
     "print(np.allclose(Y_inefi, Y_python))"
@@ -313,10 +390,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.allclose(Y_efi, Y_python))"
+   ]
   }
  ],
  "metadata": {
